--- a/MVC/MyApp/MyApp/Views/Home/About.cshtml
+++ b/MVC/MyApp/MyApp/Views/Home/About.cshtml
@@ -5,6 +5,7 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+@*this is a test commit 1*@ 
 
 
 @*this is commit in feature branch*@
